# IMDB_Query

./: CMakeLists.txt  IMDB-Query.cbp  IMDB_Query.cbp  IQuery.c  IQuery.h  Makefile  README.md  apiHandler.c  binService.c  binService.h  bpTree.c  bpTree.h  dbContext.c  dbContext.h  entities.c  entities.h  filterGenre.c  filterGenre.h  main.c  postings.c  postings.h  sysManager.c  sysManager.h  systemManager.c  systemManager.h  titleSearch.c  titleSearch.h  util.c  util.h  view.c  view.h
resource/: title.txt
